# safe-exploration

./: .gitignore  README.md  pyproject.toml  requirements.txt  visualize_runs.ipynb
.devcontainer/: Dockerfile  devcontainer.json
config/: defaults.yml
data/: replay_buffer.npz
data/ddpg/: replay_buffer.npz
data/safety_layer/: replay_buffer.npz
output/: actor.pt  constraint_0.pt  critic.pt
safe_exploration/: lidar_orientation_test.py  main.py  safety_layer_test.py  vis.py
safe_exploration/core/: config.py  net.py
safe_exploration/ddpg/: actor.py  critic.py  ddpg.py
safe_exploration/env/: ballnd.py  create_scene.py  environment_without_people.usd  obstacle_avoid.py  obstacle_avoid.usd  obstacle_avoid_env.py  obstacle_avoid_env_cfg.py  obstacle_avoid_isaac_sim.py  obstacle_avoid_isaaclab.py  obstacle_avoid_isaaclab_run.py  obstacle_avoid_isaaclab_test.py  obstacle_avoid_isaacsim.py  obstacle_avoid_test.py  spaceship.py  turtlebot.py  turtlebot.usd
safe_exploration/env/utils/: obstacles_utils.py
safe_exploration/safety_layer/: constraint_model.py  projection_safety_layer.py  safety_layer.py
safe_exploration/utils/: frequency_counter.py  path.py
src/safe_exploration/: main.py
src/safe_exploration/core/: config.py
src/safe_exploration/ddpg/: critic.py  ddpg.py
src/safe_exploration/safety_layer/: constraint_model.py
src/safe_exploration/utils/: path.py
